Add GIF visualizers for enhanced motion graphics display

--- a/visualizers.html
+++ b/visualizers.html
@@ -28,21 +28,49 @@
     <p>Looping GIF visualizers, social promos, and motion cover art.</p>
   </section>
 
-  <section class="projects-grid">
-    <!-- Example GIF tiles -->
-    <div class="project-card">
-      <img src="Gif/VisualizerGif1.gif" alt="Visualizer 1">
+   <section class="visualizer-gallery">
+  <h2 style="text-align:center;margin-bottom:1rem;">INSTAGRAM MOTIONS</h2>
+
+  <div class="visualizer-strip">
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif1.gif" alt="Visualizer 1">
+      </div>
       <h3>Visualizer 1</h3>
-    </div>
-    <div class="project-card">
-      <img src="Gif/VisualizerGif2.gif" alt="Visualizer 2">
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif2.gif" alt="Visualizer 2">
+      </div>
       <h3>Visualizer 2</h3>
-    </div>
-    <div class="project-card">
-      <img src="Gif/VisualizerGif3.gif" alt="Visualizer 3">
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif3.gif" alt="Visualizer 3">
+      </div>
       <h3>Visualizer 3</h3>
-    </div>
-  </section>
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif4.gif" alt="Visualizer 4">
+      </div>
+      <h3>Visualizer 4</h3>
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif5.gif" alt="Visualizer 5">
+      </div>
+      <h3>Visualizer 5</h3>
+    </figure>
+
+    <!-- Add more <figure> blocks as needed -->
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
