Refactor visualizer section titles and remove unused visualizer items

--- a/visualizers.html
+++ b/visualizers.html
@@ -29,7 +29,7 @@
   </section>
 
    <section class="visualizer-gallery">
-  <h2 style="text-align:center;margin-bottom:1rem;">INSTAGRAM MOTIONS</h2>
+  <h2 style="text-align:center;margin-bottom:1rem;">MOTION ART</h2>
 
   <div class="visualizer-strip">
     <figure class="visualizer-item">
@@ -53,19 +53,7 @@
       <h3>Visualizer 3</h3>
     </figure>
 
-    <figure class="visualizer-item">
-      <div class="visualizer-frame">
-        <img src="Gif/VisualizerGif4.gif" alt="Visualizer 4">
-      </div>
-      <h3>Visualizer 4</h3>
-    </figure>
-
-    <figure class="visualizer-item">
-      <div class="visualizer-frame">
-        <img src="Gif/VisualizerGif5.gif" alt="Visualizer 5">
-      </div>
-      <h3>Visualizer 5</h3>
-    </figure>
+    
 
     <!-- Add more <figure> blocks as needed -->
   </div>
