Update visualizer dimensions and add new visualizer items

--- a/visualizers.html
+++ b/visualizers.html
@@ -53,7 +53,19 @@
       <h3>Visualizer 3</h3>
     </figure>
 
-    
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif4.gif" alt="Visualizer 4">
+      </div>
+      <h3>Visualizer 4</h3>
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif5.gif" alt="Visualizer 5">
+      </div>
+      <h3>Visualizer 5</h3>
+    </figure>
 
     <!-- Add more <figure> blocks as needed -->
   </div>
