--- a/index.html
+++ b/index.html
@@ -13,29 +13,19 @@
 <body>
   <!-- Navigation Header -->
   <header>
-    <nav class="navbar">
-      <h1 class="logo">
-        <a href="index.html">
-          <img src="Pictures/GUV marker.png" alt="Logo">
-        </a>
-      </h1>
+  <nav class="navbar">
+    <h1 class="logo">
+      <a href="index.html"><img src="Pictures/GUV marker.png" alt="GUV Logo"></a>
+    </h1>
 
-      <!-- Hamburger Icon (Visible on Mobile) -->
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-
-      <!-- Navigation Links -->
-      <ul class="nav-links" id="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  </header
 
   <!-- Hero Section -->
   <section class="hero">
@@ -62,6 +52,18 @@
       </div>
     </div>
   </section>
+
+  <div class="main-wrap">
+  <h2 class="section-title">Recent Work</h2>
+
+  <div class="work-strip">
+    <a class="work-card" href="covers.html"><img src="Pictures/COVER ART 1.png" alt="Cover 1"></a>
+    <a class="work-card" href="covers.html"><img src="Pictures/COVER ART 2.png" alt="Cover 2"></a>
+    <a class="work-card" href="covers.html"><img src="Pictures/COVER ART 3.png" alt="Cover 3"></a>
+    <a class="work-card" href="covers.html"><img src="Pictures/COVER ART 4.png" alt="Cover 4"></a>
+    <!-- add more as needed -->
+  </div>
+</div>
 
   <!-- Footer -->
   <footer>
