--- a/projects.html
+++ b/projects.html
@@ -27,25 +27,20 @@
     </nav>
   </header>
 
-  <section class="content">
-  <h2>My Projects</h2>
-  <div class="projects-grid">
-    <a class="project-card" href="covers.html">
-      <img src="Pictures/Wildlife Luh Jr.png" alt="Digital Art">
-      <h3>Digital Art & Covers</h3>
-    </a>
+  <section>
+  <h2 class="section-title">Content Design</h2>
 
-    <a class="project-card" href="visualizers.html">
-      <img src="Pictures/DumpYardiganz Thumbnail.png" alt="Motion/Visualizer">
-      <h3>Motion / Visualizers</h3>
-    </a>
-
-    <a class="project-card" href="drawings.html">
-      <img src="Pictures/TDuke Flyer.png" alt="Drawings/Cartoons">
-      <h3>Cartoons & Drawings</h3>
-    </a>
+  <div class="portfolio-grid">
+    <a class="portfolio-item" href="covers.html"><img src="Pictures/Wildlife Luh Jr.png" alt="Digital Cover"></a>
+    <a class="portfolio-item" href="visualizers.html"><img src="Pictures/DumpYardiganz Thumbnail.png" alt="Visualizer"></a>
+    <a class="portfolio-item" href="drawings.html"><img src="Pictures/TDuke Flyer.png" alt="Drawing"></a>
+    <!-- add more items -->
   </div>
-</section>
+
+  <p style="text-align:center; margin: 1rem 0 2.5rem;">
+    <a class="btn-lg" href="projects.html">See More Work</a>
+  </p>
+  </section>
 
   <footer>
     <p>© 2025 My Portfolio</p>
