Fixes Visualizers Page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- Category 2 -->
       <a class="portfolio-item" href="visualizers.html">
-        <img src="Pictures/DumpYardiganz Thumbnail.png" alt="Visualizer">
+        <img src="Gif/VisualizerGif7.gif" alt="Visualizer">
       </a>
 
       <!-- Category 3 -->
@@ -86,7 +86,7 @@
 
       <!-- Optional More -->
       <a class="portfolio-item" href="projects.html">
-        <img src="Pictures/COVER ART 6.png" alt="More Work">
+        <img src="Gif/VisualizerGif7.gif" alt="More Work">
       </a>
     </div>
 
