--- a/visualizers.html
+++ b/visualizers.html
@@ -67,6 +67,20 @@
       <h3>Visualizer 5</h3>
     </figure>
 
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif6.gif" alt="Visualizer 6">
+      </div>
+      <h3>Visualizer 6</h3>
+    </figure>
+
+    <figure class="visualizer-item">
+      <div class="visualizer-frame">
+        <img src="Gif/VisualizerGif7.gif" alt="Visualizer 7">
+      </div>
+      <h3>Visualizer 7</h3>
+    </figure>
+
     <!-- Add more <figure> blocks as needed -->
   </div>
 </section>
