Added new images, updates to index page made too.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
       <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 5.png" alt="Cover 5">
       </a>
+      <a class="work-card" href="covers.html">
+        <img src="Pictures/COVER ART 6.png" alt="Cover 6">
+      </a>
+      <a class="work-card" href="covers.html">
+        <img src="Pictures/COVER ART 7.png" alt="Cover 7">
+      </a>
+      <a class="work-card" href="covers.html">
+        <img src="Pictures/COVER ART 8.png" alt="Cover 8">
+      </a>
+      <a class="work-card" href="covers.html">
+        <img src="Pictures/COVER ART 9.png" alt="Cover 9">
+      </a>
+      <a class="work-card" href="covers.html">
+        <img src="Pictures/COVER ART 10.png" alt="Cover 10">
+      </a>
     </div>
   </div>
 
@@ -86,7 +101,7 @@
 
       <!-- Optional More -->
       <a class="portfolio-item" href="projects.html">
-        <img src="Gif/VisualizerGif7.gif" alt="More Work">
+        <img src="Pictures/GUV CLOUD PFP.png" alt="More Work">
       </a>
     </div>
 
