Testing for Index and Styles

--- a/index.html
+++ b/index.html
@@ -41,39 +41,40 @@
     </div>
   </section>
 
-  <!-- ========== RECENT WORK (Horizontal Strip) ========== -->
+  <!-- ========== RECENT WORK (Horizontal Strip with Lightbox) ========== -->
   <div class="main-wrap">
     <h2 class="section-title">Recent Work</h2>
 
     <div class="work-strip">
-      <a class="work-card" href="covers.html">
+      <!-- Use data-full if you want to open a larger file than the thumbnail -->
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 1.png">
         <img src="Pictures/COVER ART 1.png" alt="Cover 1">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 2.png">
         <img src="Pictures/COVER ART 2.png" alt="Cover 2">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 3.png">
         <img src="Pictures/COVER ART 3.png" alt="Cover 3">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 4.png">
         <img src="Pictures/COVER ART 4.png" alt="Cover 4">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 5.png">
         <img src="Pictures/COVER ART 5.png" alt="Cover 5">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 6.png">
         <img src="Pictures/COVER ART 6.png" alt="Cover 6">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 7.png">
         <img src="Pictures/COVER ART 7.png" alt="Cover 7">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 8.png">
         <img src="Pictures/COVER ART 8.png" alt="Cover 8">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 9.png">
         <img src="Pictures/COVER ART 9.png" alt="Cover 9">
       </a>
-      <a class="work-card" href="covers.html">
+      <a class="work-card lightbox-trigger" href="#!" data-full="Pictures/COVER ART 10.png">
         <img src="Pictures/COVER ART 10.png" alt="Cover 10">
       </a>
     </div>
@@ -84,22 +85,15 @@
     <h2 class="section-title">Content Design</h2>
 
     <div class="portfolio-grid">
-      <!-- Category 1 -->
       <a class="portfolio-item" href="covers.html">
         <img src="Pictures/Wildlife Luh Jr.png" alt="Digital Cover">
       </a>
-
-      <!-- Category 2 -->
       <a class="portfolio-item" href="visualizers.html">
         <img src="Gif/VisualizerGif7.gif" alt="Visualizer">
       </a>
-
-      <!-- Category 3 -->
       <a class="portfolio-item" href="drawings.html">
         <img src="Pictures/TDuke Flyer.png" alt="Drawing / Cartoon">
       </a>
-
-      <!-- Optional More -->
       <a class="portfolio-item" href="projects.html">
         <img src="Pictures/GUV CLOUD PFP.png" alt="More Work">
       </a>
@@ -110,20 +104,78 @@
     </p>
   </section>
 
+  <!-- ========== LIGHTBOX (one per page) ========== -->
+  <div class="lightbox" id="lightbox" aria-hidden="true">
+    <button class="lb-btn lb-close" id="lb-close" aria-label="Close (Esc)">×</button>
+    <button class="lb-btn lb-prev" id="lb-prev" aria-label="Previous (←)">‹</button>
+    <img id="lb-img" alt="Expanded artwork">
+    <button class="lb-btn lb-next" id="lb-next" aria-label="Next (→)">›</button>
+  </div>
+
   <!-- ========== FOOTER ========== -->
   <footer>
     <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
   </footer>
 
-  <!-- ========== JS: Hamburger Toggle ========== -->
+  <!-- ========== JS (Hamburger + Lightbox) ========== -->
   <script>
+    // Hamburger
     const hamburger = document.getElementById('hamburger');
     const navLinks  = document.getElementById('nav-links');
-    hamburger.addEventListener('click', () => {
+    hamburger?.addEventListener('click', () => {
       navLinks.classList.toggle('show');
       hamburger.classList.toggle('open');
     });
-  </script>
 
+    // Lightbox
+    const triggers = Array.from(document.querySelectorAll('.lightbox-trigger'));
+    const lightbox = document.getElementById('lightbox');
+    const imgEl    = document.getElementById('lb-img');
+    const btnClose = document.getElementById('lb-close');
+    const btnPrev  = document.getElementById('lb-prev');
+    const btnNext  = document.getElementById('lb-next');
+
+    let idx = 0;
+
+    function openAt(i){
+      idx = i;
+      const t = triggers[idx];
+      const full = t.dataset.full || t.querySelector('img').src;
+      imgEl.src = full;
+      lightbox.classList.add('open');
+      lightbox.setAttribute('aria-hidden','false');
+    }
+    function closeBox(){
+      lightbox.classList.remove('open');
+      lightbox.setAttribute('aria-hidden','true');
+      imgEl.removeAttribute('src');
+    }
+    function prev(){ openAt((idx - 1 + triggers.length) % triggers.length); }
+    function next(){ openAt((idx + 1) % triggers.length); }
+
+    triggers.forEach((t,i)=>{
+      t.addEventListener('click', (e)=>{
+        e.preventDefault();
+        openAt(i);
+      });
+    });
+
+    btnClose.addEventListener('click', closeBox);
+    btnPrev .addEventListener('click', prev);
+    btnNext .addEventListener('click', next);
+
+    // Close by clicking the dark backdrop
+    lightbox.addEventListener('click', (e)=>{
+      if(e.target === lightbox) closeBox();
+    });
+
+    // Keyboard support
+    window.addEventListener('keydown', (e)=>{
+      if(!lightbox.classList.contains('open')) return;
+      if(e.key === 'Escape') closeBox();
+      if(e.key === 'ArrowLeft') prev();
+      if(e.key === 'ArrowRight') next();
+    });
+  </script>
 </body>
 </html>
