--- a/index.html
+++ b/index.html
@@ -46,36 +46,36 @@
     <h2 class="section-title">Recent Work</h2>
 
     <div class="work-strip">
-      <div class="work-card">
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 1.png" alt="Cover 1">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 2.png" alt="Cover 2">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 3.png" alt="Cover 3">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 4.png" alt="Cover 4">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 5.png" alt="Cover 5">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 6.png" alt="Cover 6">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 7.png" alt="Cover 7">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 8.png" alt="Cover 8">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 9.png" alt="Cover 9">
-      </div>
-      <div class="work-card">
+      </a>
+      <a class="work-card" href="covers.html">
         <img src="Pictures/COVER ART 10.png" alt="Cover 10">
-      </div>
+      </a>
     </div>
   </div>
 
@@ -115,38 +115,13 @@
     <p>© 2025 GUVGFX | Designed by Guvnor Nnanna</p>
   </footer>
 
-  <!-- ========== IMAGE MODAL (Enlarge on Click) ========== -->
-  <div id="imageModal" class="image-modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="modalImg">
-  </div>
-
-  <!-- ========== JS: Hamburger + Image Modal ========== -->
+  <!-- ========== JS: Hamburger Toggle ========== -->
   <script>
-    // Hamburger menu toggle
     const hamburger = document.getElementById('hamburger');
     const navLinks  = document.getElementById('nav-links');
     hamburger.addEventListener('click', () => {
       navLinks.classList.toggle('show');
       hamburger.classList.toggle('open');
-    });
-
-    // Image modal logic
-    const modal = document.getElementById('imageModal');
-    const modalImg = document.getElementById('modalImg');
-    const closeBtn = document.querySelector('.image-modal .close');
-
-    document.querySelectorAll('.work-card img').forEach(img => {
-      img.addEventListener('click', () => {
-        modal.style.display = 'flex';
-        modalImg.src = img.src;
-        modalImg.alt = img.alt;
-      });
-    });
-
-    closeBtn.addEventListener('click', () => modal.style.display = 'none');
-    modal.addEventListener('click', e => {
-      if (e.target === modal) modal.style.display = 'none';
     });
   </script>
 
