Added my website on the index page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
     <p class="center mt-2">
-      <a class="btn-lg" href="projects.html">See More Work</a>
+      <a class="btn-lg" href="https://www.instagram.com/guvgfx/">See More Work</a>
     </p>
   </section>
 
