--- a/index.html
+++ b/index.html
@@ -41,41 +41,34 @@
     </div>
   </section>
 
-  <!-- ========== RECENT WORK (Horizontal Strip) ========== -->
+  <!-- ========== RECENT WORK (Auto-Scrolling Slideshow) ========== -->
   <div class="main-wrap">
     <h2 class="section-title">Recent Work</h2>
 
     <div class="work-strip">
-      <div class="work-card">
-        <img src="Pictures/COVER ART 1.png" alt="Cover 1">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 2.png" alt="Cover 2">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 3.png" alt="Cover 3">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 4.png" alt="Cover 4">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 5.png" alt="Cover 5">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 6.png" alt="Cover 6">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 7.png" alt="Cover 7">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 8.png" alt="Cover 8">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 9.png" alt="Cover 9">
-      </div>
-      <div class="work-card">
-        <img src="Pictures/COVER ART 10.png" alt="Cover 10">
-      </div>
+      <!-- Original images -->
+      <div class="work-card"><img src="Pictures/COVER ART 1.png" alt="Cover 1"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 2.png" alt="Cover 2"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 3.png" alt="Cover 3"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 4.png" alt="Cover 4"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 5.png" alt="Cover 5"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 6.png" alt="Cover 6"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 7.png" alt="Cover 7"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 8.png" alt="Cover 8"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 9.png" alt="Cover 9"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
+
+      <!-- Duplicate for seamless looping -->
+      <div class="work-card"><img src="Pictures/COVER ART 1.png" alt="Cover 1"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 2.png" alt="Cover 2"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 3.png" alt="Cover 3"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 4.png" alt="Cover 4"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 5.png" alt="Cover 5"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 6.png" alt="Cover 6"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 7.png" alt="Cover 7"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 8.png" alt="Cover 8"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 9.png" alt="Cover 9"></div>
+      <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
     </div>
   </div>
 
