Refactor Recent Work section for continuous marquee effect and improved image handling

--- a/index.html
+++ b/index.html
@@ -46,29 +46,31 @@
     <h2 class="section-title">Recent Work</h2>
 
     <div class="work-strip">
-      <!-- Original images -->
-      <div class="work-card"><img src="Pictures/COVER ART 1.png" alt="Cover 1"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 2.png" alt="Cover 2"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 3.png" alt="Cover 3"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 4.png" alt="Cover 4"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 5.png" alt="Cover 5"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 6.png" alt="Cover 6"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 7.png" alt="Cover 7"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 8.png" alt="Cover 8"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 9.png" alt="Cover 9"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
+      <div class="work-track">
+        <!-- originals (10) -->
+        <div class="work-card"><img src="Pictures/COVER ART 1.png"  alt="Cover 1"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 2.png"  alt="Cover 2"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 3.png"  alt="Cover 3"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 4.png"  alt="Cover 4"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 5.png"  alt="Cover 5"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 6.png"  alt="Cover 6"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 7.png"  alt="Cover 7"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 8.png"  alt="Cover 8"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 9.png"  alt="Cover 9"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
 
-      <!-- Duplicate for seamless looping -->
-      <div class="work-card"><img src="Pictures/COVER ART 1.png" alt="Cover 1"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 2.png" alt="Cover 2"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 3.png" alt="Cover 3"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 4.png" alt="Cover 4"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 5.png" alt="Cover 5"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 6.png" alt="Cover 6"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 7.png" alt="Cover 7"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 8.png" alt="Cover 8"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 9.png" alt="Cover 9"></div>
-      <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
+        <!-- duplicates (same 10, in same order) -->
+        <div class="work-card"><img src="Pictures/COVER ART 1.png"  alt="Cover 1 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 2.png"  alt="Cover 2 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 3.png"  alt="Cover 3 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 4.png"  alt="Cover 4 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 5.png"  alt="Cover 5 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 6.png"  alt="Cover 6 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 7.png"  alt="Cover 7 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 8.png"  alt="Cover 8 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 9.png"  alt="Cover 9 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10 duplicate"></div>
+      </div>
     </div>
   </div>
 
