Add new cover art images to portfolio

--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
         <div class="work-card"><img src="Pictures/COVER ART 8.png"  alt="Cover 8"></div>
         <div class="work-card"><img src="Pictures/COVER ART 9.png"  alt="Cover 9"></div>
         <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 11.png"  alt="Cover 4"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 12.png"  alt="Cover 5"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 13.png"  alt="Cover 6"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 14.png"  alt="Cover 7"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 15.png"  alt="Cover 8"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 16.png"  alt="Cover 9"></div>
+      
 
         <!-- duplicates (same 10, in same order) -->
         <div class="work-card"><img src="Pictures/COVER ART 1.png"  alt="Cover 1 duplicate"></div>
@@ -70,6 +77,12 @@
         <div class="work-card"><img src="Pictures/COVER ART 8.png"  alt="Cover 8 duplicate"></div>
         <div class="work-card"><img src="Pictures/COVER ART 9.png"  alt="Cover 9 duplicate"></div>
         <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 11.png" alt="Cover 11 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 12.png" alt="Cover 12 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 13.png" alt="Cover 13 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 14.png" alt="Cover 14 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 15.png" alt="Cover 15 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 16.png" alt="Cover 16 duplicate"></div>
       </div>
     </div>
   </div>
