Add flyers HTML page and promotional flyer images
- Created a new HTML file for promotional flyers with a responsive layout.
- Added navigation links for easy access to other sections of the website.
- Implemented a lightbox feature for viewing larger versions of the flyers.
- Included four promotional flyer images in the project.

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
 
         <!-- Motion / Visualizers -->
         <a class="portfolio-item" href="visualizers.html" aria-label="View Motion Visualizers">
-          <img src="Pictures/DumpYardiganz Thumbnail.png" alt="Visualizer thumbnail">
+          <img src="/Gif/VisualizerGif7.gif" alt="Visualizer thumbnail">
         </a>
 
         <!-- Cartoons / Drawings -->
