--- a/index.html
+++ b/index.html
@@ -58,14 +58,17 @@
         <div class="work-card"><img src="Pictures/COVER ART 8.png"  alt="Cover 8"></div>
         <div class="work-card"><img src="Pictures/COVER ART 9.png"  alt="Cover 9"></div>
         <div class="work-card"><img src="Pictures/COVER ART 10.png" alt="Cover 10"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 11.png"  alt="Cover 4"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 12.png"  alt="Cover 5"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 13.png"  alt="Cover 6"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 14.png"  alt="Cover 7"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 15.png"  alt="Cover 8"></div>
-        <div class="work-card"><img src="Pictures/COVER ART 16.png"  alt="Cover 9"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 11.png"  alt="Cover 11"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 12.png"  alt="Cover 12"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 13.png"  alt="Cover 13"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 14.png"  alt="Cover 14"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 15.png"  alt="Cover 15"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 16.png"  alt="Cover 16"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 17.png"  alt="Cover 17"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 18.png"  alt="Cover 18"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 19.png"  alt="Cover 19"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 20.png"  alt="Cover 20"></div>
       
-
         <!-- duplicates (same 10, in same order) -->
         <div class="work-card"><img src="Pictures/COVER ART 1.png"  alt="Cover 1 duplicate"></div>
         <div class="work-card"><img src="Pictures/COVER ART 2.png"  alt="Cover 2 duplicate"></div>
@@ -83,6 +86,10 @@
         <div class="work-card"><img src="Pictures/COVER ART 14.png" alt="Cover 14 duplicate"></div>
         <div class="work-card"><img src="Pictures/COVER ART 15.png" alt="Cover 15 duplicate"></div>
         <div class="work-card"><img src="Pictures/COVER ART 16.png" alt="Cover 16 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 17.png" alt="Cover 17 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 18.png" alt="Cover 18 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 19.png" alt="Cover 19 duplicate"></div>
+        <div class="work-card"><img src="Pictures/COVER ART 20.png" alt="Cover 20 duplicate"></div>
       </div>
     </div>
   </div>
