--- a/flyers.html
+++ b/flyers.html
@@ -13,12 +13,9 @@
   <header>
     <nav class="navbar">
       <h1 class="logo">
-        <a href="index.html">
-          <img src="Pictures/GUV marker.png" alt="GUV Logo">
-        </a>
+        <a href="index.html"><img src="Pictures/GUV marker.png" alt="GUV Logo"></a>
       </h1>
 
-      <!-- Hamburger (mobile) -->
       <div class="hamburger" id="hamburger">
         <span></span><span></span><span></span>
       </div>
@@ -37,28 +34,45 @@
     <section class="container">
       <h2 class="section-title">Promotional Flyers</h2>
       <p class="center mt-1" style="max-width:800px;margin-inline:auto;color:#444;">
-        A selection of event flyers and promo posters. Click any tile to view larger.
+        10 recent flyers. Tap any tile to view larger.
       </p>
     </section>
 
-    <!-- Neon-framed grid (reuses .portfolio-grid / .portfolio-item from your CSS) -->
+    <!-- 5-across gallery (2 rows × 5) -->
     <section>
-      <div class="portfolio-grid">
-        <!-- Use data-full for a bigger lightbox image (can be same as thumbnail) -->
-        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer1.jpg">
-          <img src="Pictures/FLYER ART 1.png" alt="Flyer 1 - Event Promo">
+      <div class="flyer-grid">
+        <!-- row 1 -->
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer1.jpg">
+          <img src="Pictures/Flyers/flyer1.jpg" alt="Flyer 1">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer2.jpg">
+          <img src="Pictures/Flyers/flyer2.jpg" alt="Flyer 2">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer3.jpg">
+          <img src="Pictures/Flyers/flyer3.jpg" alt="Flyer 3">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer4.jpg">
+          <img src="Pictures/Flyers/flyer4.jpg" alt="Flyer 4">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer5.jpg">
+          <img src="Pictures/Flyers/flyer5.jpg" alt="Flyer 5">
         </a>
 
-        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer2.jpg">
-          <img src="Pictures/FLYER ART 2.png" alt="Flyer 2 - Nightlife">
+        <!-- row 2 -->
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer6.jpg">
+          <img src="Pictures/Flyers/flyer6.jpg" alt="Flyer 6">
         </a>
-
-        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer3.jpg">
-          <img src="Pictures/FLYER ART 3.png" alt="Flyer 3 - Concert">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer7.jpg">
+          <img src="Pictures/Flyers/flyer7.jpg" alt="Flyer 7">
         </a>
-
-        <a class="portfolio-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer4.jpg">
-          <img src="Pictures/FLYER ART 4.png" alt="Flyer 4 - Club Poster">
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer8.jpg">
+          <img src="Pictures/Flyers/flyer8.jpg" alt="Flyer 8">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer9.jpg">
+          <img src="Pictures/Flyers/flyer9.jpg" alt="Flyer 9">
+        </a>
+        <a class="flyer-item lightbox-trigger" href="#!" data-full="Pictures/Flyers/flyer10.jpg">
+          <img src="Pictures/Flyers/flyer10.jpg" alt="Flyer 10">
         </a>
       </div>
 
@@ -68,7 +82,7 @@
     </section>
   </main>
 
-  <!-- ===== LIGHTBOX (same as index) ===== -->
+  <!-- ===== LIGHTBOX (reuse) ===== -->
   <div class="lightbox" id="lightbox" aria-hidden="true">
     <button class="lb-btn lb-close" id="lb-close" aria-label="Close (Esc)">×</button>
     <button class="lb-btn lb-prev" id="lb-prev" aria-label="Previous (←)">‹</button>
@@ -100,7 +114,6 @@
     const btnNext  = document.getElementById('lb-next');
 
     let idx = 0;
-
     function openAt(i){
       idx = i;
       const t = triggers[idx];
@@ -109,32 +122,17 @@
       lightbox.classList.add('open');
       lightbox.setAttribute('aria-hidden','false');
     }
-    function closeBox(){
-      lightbox.classList.remove('open');
-      lightbox.setAttribute('aria-hidden','true');
-      imgEl.removeAttribute('src');
-    }
+    function closeBox(){ lightbox.classList.remove('open'); lightbox.setAttribute('aria-hidden','true'); imgEl.removeAttribute('src'); }
     function prev(){ openAt((idx - 1 + triggers.length) % triggers.length); }
     function next(){ openAt((idx + 1) % triggers.length); }
 
-    triggers.forEach((t,i)=>{
-      t.addEventListener('click', (e)=>{
-        e.preventDefault();
-        openAt(i);
-      });
-    });
-
+    triggers.forEach((t,i)=> t.addEventListener('click', e => { e.preventDefault(); openAt(i); }));
     btnClose.addEventListener('click', closeBox);
     btnPrev .addEventListener('click', prev);
     btnNext .addEventListener('click', next);
 
-    // Close by clicking the backdrop
-    lightbox.addEventListener('click', (e)=>{
-      if(e.target === lightbox) closeBox();
-    });
-
-    // Keyboard support
-    window.addEventListener('keydown', (e)=>{
+    lightbox.addEventListener('click', e => { if(e.target === lightbox) closeBox(); });
+    window.addEventListener('keydown', e=>{
       if(!lightbox.classList.contains('open')) return;
       if(e.key === 'Escape') closeBox();
       if(e.key === 'ArrowLeft') prev();
